# emailfy

./: .gitignore  .pyirc  .pypirc  =2.5.0  LICENSE  README.md  readme.md  realease_2_pypi.sh  setup.cfg  setup.py  setup_upload_pk.sh
emailfy/: __.main__.py  __init__.py  deliverability.py  exceptions_types.py  rfc_constants.py  syntax.py  validate_email.py  version.py
tests/: basic_email_validation.py  bulk_email_validation.py  special_use_domains_name.py
