[metadata]
name = emailfy
version = attr: emailfy.version.__version__
description = Emailfy is a powerful Python package designed for comprehensive email address validation. It goes beyond basic syntax checks, providing advanced validation features and deliverability checks to ensure that email addresses are not only correctly formatted but also deliverable in a real-world environment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChristopherTavaresBR/emailfy
author = Christopher Yosef
author_email = aratava82@gmail.com
license = MIT
license_files = LICENSE

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    pythondns>=2.5.0
    idna

[options.packages.find]
exclude =
    tests*
    testing*

[options.extras_require]
test =
    pytest
    pytest-cov
    mypy
    pylint
    black
    isort
